objects/ssot__GoalDefinition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalDefinitionCategory__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalDefinitionStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalDefinitionType__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Goal Definition Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentGoalId__c</fullName>
        <label>Parent Goal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668783655_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoalDefinition_ParentGoalId_map_Goal_rel</label>
        <referenceTo>ssot__GoalDefinition__dlm</referenceTo>
        <relationshipLabel>GoalDefinition_ParentGoalId_map_Goal_rel</relationshipLabel>
        <relationshipName>rel_1716668783655_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>